# traffic_light_detection

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  builddocker.sh  config.cpp  config.hpp  config.json  data_provider.cpp  data_provider.hpp  detector.cpp  detector.hpp  main.cpp  rundocker.sh  visualizer.cpp  visualizer.hpp
